<resources>
    <!--key-->
    <string name="appID">55242768268623807</string>

    <!-- Onboarding-->
    <string name="title0">Herbs ® Thảo Dược Cao Cấp</string>
    <string name="description0">Là hệ thống phân phối thảo dược, thực phẩm chức năng, dinh dưỡng,
        sản phẩm hữu cơ. Herbs &amp; More ® trực thuộc Công ty Cổ phần Phân phối Thông minh Cổng
        Việt(Vietgate.ae) có trụ sở chính tại Dubai, UAE &amp; chi nhánh tại Tp.HCM.</string>
    <string name="title1">Đảm bảo xuất xứ</string>
    <string name="description1">Nguồn gốc xuất xứ đúng như trên bao bì và công bố sản phẩm,
        bồi thường 500% giá trị đơn hàng cho nếu không đúng xuất xứ.</string>
    <string name="title2">Cam kết chất lượng</string>
    <string name="description2">Cam kết chất lượng như công bố, bồi thường 200% giá trị đơn hàng
        cho sản phẩm không đạt hay kém chất lượng.</string>
    <string name="title3">Phục vụ tận tâm</string>
    <string name="description3">Chúng tôi mong muốn lắng nghe chia sẽ về tình trạng sức khỏe, nhu
        cầu của quý khách hàng &amp; sẵn sàng phục vụ bằng cả tấm lòng.</string>
    <string name="start_now">Start Now</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <!-- Login-->
    <string name="s_select_all">Select all</string>
    <string name="promotion">Promotion</string>
    <string name="lb_username">Your email or Phone Number</string>
    <string name="lb_name">Name*</string>
    <string name="lb_email">Email</string>
    <string name="lb_password">Password</string>
    <string name="lb_email_requiment">Email*</string>
    <string name="lb_password_requiment">Password*</string>
    <string name="lb_login_reset_password">Forgot password?</string>
    <string name="lb_continued_as_guest">Continued as a guest</string>
    <string name="lb_or_login_with">Or login with</string>
    <string name="lb_sign_up">Sign up</string>
    <string name="lb_footer_login">Don\'t have an account?</string>
    <string name="lb_footer_signup">Already have an account?</string>
    <string name="lb_log_in">Log in</string>
    <string name="name_hint">Input your name</string>
    <string name="email_hint">Input your email</string>
    <string name="password_hint">Input password</string>
    <string name="continute_with">Or continute with</string>
    <string name="message_forgot">Để khôi phục mật khẩu của bạn, vui lòng nhập địa chỉ email</string>
    <string name="help">Help?</string>
    <string name="reset_password">Reset password</string>
    <string name="comming_soon">Comming soon</string>
    <string name="require_login">Please login to use this function!</string>

    <string name="email_is_blank">Please enter your email</string>
    <string name="password_is_blank">Please enter your password</string>
    <string name="email_wrong_format">Invalid email address</string>
    <string name="name_is_blank">Please enter your name</string>
    <string name="name_shorter">Name must be at least 2 characters</string>
    <string name="password_shorter">Password must be at least 6 characters</string>
    <string name="password_not_contain_space">Password must not contain space</string>
    <string name="login_error">Login error</string>
    <string name="register_error">Register error</string>
    <string name="register_success">Register success</string>
    <string name="forgot_error">Forgot password fail</string>
    <string name="forgot_success">Password recovery email has been sent</string>
    <string name="close">Close</string>
    <string name="continute_account">Continute with newly  account</string>
    <string name="back_to_login">Back to login</string>
    <string name="forgot_text1">Email hướng dẫn tạo mật khẩu đã được gửi đến địa chỉ <![CDATA[<b><font color=#FF3945>%s</font></b>]]>. Hãy kiểm tra email và làm theo hướng đẫn.</string>
    <string name="forgot_text2">Trong trường hợp không tìm thấy email trong hộp thư đến (inbox), vui lòng kiểm tra hộp thư Spam hoặc Junk.</string>
    <string name="network_error">Make sure you have an active data connection</string>
    <string name="network_error_title">Network error</string>
    <string name="server_error_title">Connect server fail</string>
    <string name="server_error">Hiện tại server hoạt động không ổn định. Vui lòng thử lại sau.</string>

    <!-- Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_saved">Favorite</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_profile">Account</string>

    <!-- Home-->
    <string name="you">you</string>
    <string name="title_morning">Good morning!</string>
    <string name="title_affternoon">Good affternoon!</string>
    <string name="title_evening">Good evening!</string>
    <string name="title_feeling">How are you feeling? </string>
    <string name="say_hi">Hi,</string>
    <string name="say_hi_name">%s!</string>
    <string name="best_selling">Best selling</string>
    <string name="see_more">See more</string>
    <string name="recently">Recently viewed</string>
    <string name="suggested">Suggested for you</string>
    <string name="login_register">Login / register</string>
    <string name="number_comment">%s Comment</string>
    <string name="vnd"><u>đ</u></string>

    <!-- Category-->
    <string name="search_hint">Search...</string>
    <string name="product_category">Product category</string>
    <string name="product">Product</string>

    <!-- Category-->
    <string name="profile_name">Full name</string>
    <string name="profile_phone">Phone number</string>
    <string name="profile_email">Email</string>
    <string name="my_purchases">My purchases</string>
    <string name="address_book">Address Book</string>
    <string name="sign_out">Sign out</string>
    <string name="lb_cancel">Cancel</string>

    <!-- Detail-->
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="number_comment_detail">(%s Comment)</string>
    <string name="comment_empty">No reviews yet</string>
    <string name="policy1">Bồi thường 200% nếu không dạt hay kém chất lượng</string>
    <string name="policy2">Bồi thường 500% nếu không đúng xuất sứ</string>
    <string name="policy3">Sản phẩm được miễn phí vận chuyển</string>
    <string name="info_detail">Infomation product</string>
    <string name="producer">Producer:</string>
    <string name="specification">Specification:</string>
    <string name="dosage_forms">Dosage form:</string>
    <string name="expiry_date">Expiry date:</string>
    <string name="category">Category:</string>
    <string name="key_word">Key word:</string>
    <string name="description">Description</string>
    <string name="see_less">See less</string>
    <string name="rating_product">Rating product</string>
    <string name="see_all">See all</string>
    <string name="your_rating">Your rating</string>
    <string name="rating_hint">Input your comment</string>
    <string name="rating_is_blank">Please enter your comment</string>
    <string name="rating_email_hint">Input email (require)</string>
    <string name="rating_name_hint">Your name display (require)</string>
    <string name="rating">Rating</string>
    <string name="hints_for_you">Hints for you</string>
    <string name="rating_title">Thank for your rating!</string>

    <!-- Cart-->
    <string name="cart">Cart</string>
    <string name="total_payment">Total payment</string>
    <string name="discount_code">Discount code</string>
    <string name="input_discount_code">Input discount code</string>
    <string name="apply">Apply</string>
    <string name="total_temp">Total temp</string>
    <string name="proceed_to_order">Proceed to order</string>
    <string name="buy_later">Buy later</string>
    <string name="cart_empty">Chưa có sản phẩm nào trong giỏ hàng</string>
    <string name="continue_buy">Tiếp tục mua sắm</string>
    <string name="title_delete">Bạn chắc chắn muốn bỏ sản phẩm này?</string>
    <string name="btn_ok">OK</string>
    <string name="code_is_blank">Please input discount code</string>
    <string name="code_error">Discount code error</string>
    <string name="code_success">Apply discount code success, you will get <![CDATA[<b>%s</b>]]></string>
    <string name="percent">&#37; off</string>

    <!-- Payment-->
    <string name="payment">Payment</string>
    <string name="note_order">Order note</string>
    <string name="note_order_hint">Order note\n(Ex: Time delivery or detail address)</string>
    <string name="receiving_information">Receiving information</string>
    <string name="delivery_address">Delivery address*</string>
    <string name="delivery_address_hint">Input address(street, home number,...)</string>
    <string name="delivery_phone">Phone number*</string>
    <string name="delivery_phone_hint">Input your phone number</string>
    <string name="details_order">Details order</string>
    <string name="delivery_charges">Delivery charges</string>
    <string name="free">Free ship</string>
    <string name="payment_methods">Payment methods</string>
    <string name="payment_on_delivery">Payment on delivery</string>
    <string name="complete_order">Complete your order</string>
    <string name="address_is_blank">Please enter your address</string>
    <string name="phone_is_blank">Please enter your phone number</string>
    <string name="phone_shorter">Phone number must be at least 10 characters</string>
    <string name="phone_not_contain_space">Phone number must not contain space</string>

    <!-- Payment Result-->
    <string name="success">Success</string>
    <string name="thank_trust">Thank you for your trust</string>
    <string name="order_success">Your order has been successfully placed (*)</string>
    <string name="code_orders">Code orders:</string>
    <string name="date_order">Date of order:</string>
    <string name="total_orders">Total:</string>
    <string name="payment_methods_lb">Payment methods:</string>
    <string name="note_orders">(*) Sẽ có một email gửi cho bạn, bạn vui lòng kiểm tra hộp thư để kiểm tra chi tiết về thông tin đơn hàng.
        <![CDATA[<br/>]]>- Trường hợp bạn đã thanh toán bằng các phương thức thanh toán do chúng tôi cung cấp bạn vùi lòng chờ email xác nhận trong vòng
        24h tính từ thời gian bạn hoàn tất đặt hàng <![CDATA[<b>hoặc</b>]]> liên hệ hotline <![CDATA[<b>0989588553</b>]]> | <![CDATA[<b>0902717858</b>]]></string>
    <string name="back_to_purchase">Back to purchase</string>

    <!-- Search-->
    <string name="search_hint_page">Sản phẩm, thương hiệu và mọi thứ bạn cần ...</string>
    <string name="search_history">Search history</string>
    <string name="most_searched">Most search</string>
    <string name="clear_history">Clear history</string>
    <string name="search_result">Search result</string>

    <!-- Filter-->
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="newest">Newest product</string>
    <string name="high_low">Price high to low</string>
    <string name="low_high">Price low to high</string>
    <string name="according_popularity">According to popularity</string>
    <string name="according_rating">According to rating</string>
    <string name="category_title">Category</string>
    <string name="functional_foods">Functional foods</string>
    <string name="american_ginseng">American ginseng</string>
    <string name="gift_set">Gift set</string>
    <string name="price">Price</string>
    <string-array name="filter_array">
        <item>Newest product</item>
        <item>According to popularity</item>
        <item>According to rating</item>
        <item>Price: Low to high</item>
        <item>Price: High to low</item>
    </string-array>
    <string name="clear_filter">Clear filter</string>

</resources>