<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/menu_selector_home"/>

    <item
        android:id="@+id/categoryFragment"
        android:title="@string/menu_category"
        android:icon="@drawable/ic_category"/>

    <item
        android:id="@+id/savedFragment"
        android:title="@string/menu_saved"
        android:icon="@drawable/ic_saved"/>

    <item
        android:id="@+id/notifiFragment"
        android:title="@string/menu_notification"
        android:icon="@drawable/ic_notification"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_account"/>

</menu>