<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <com.zhpan.bannerview.BannerViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_300"
        android:fontFamily="@font/utm_avo_bold"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dp_5"
        android:text="@string/title1"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_describe"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_130"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_160"
        android:gravity="top|center_horizontal"
        android:fontFamily="@font/utm_avo"
        android:lineSpacingExtra="@dimen/dp_5"
        android:text="@string/description0"
        android:textColor="@color/text_lable"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@drawable/bg_start"
        android:fontFamily="@font/utm_avo"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/start_now"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_14"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@drawable/bg_next"
        android:fontFamily="@font/utm_avo"
        android:gravity="center"
        android:onClick="onNext"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/dp_30"
        android:onClick="onClick"
        android:text="@string/skip"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_16" />

</RelativeLayout>