<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center"
        android:fontFamily="@font/utm_avo"
        android:gravity="center"
        android:text="@string/title_delete"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_15">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            style="@style/App.Button.Text"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGray"
            android:text="@string/lb_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAgree"
            style="@style/App.Button.Text"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_ok" />
    </LinearLayout>

</LinearLayout>
