<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.search.FilterActivity">

    <data>

        <variable
            name="activity"
            type="herbs.n.more.ui.search.FilterActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_centerVertical="true"
                android:background="?actionBarItemBackground"
                android:onClick="@{()->activity.onBackPressed()}"
                android:padding="@dimen/dp_13"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_close" />

            <TextView
                style="@style/ColorMainTextRegular15"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_toRightOf="@+id/ib_back"
                android:text="@string/filter" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <TextView
                style="@style/ColorMainTextBold15"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/product_category" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sn_filter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15" />

            <TextView
                style="@style/ColorMainTextBold15"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/category_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_15">

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_45"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/utm_avo_bold"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_hint"
                    android:textOff="@string/functional_foods"
                    android:outlineAmbientShadowColor="@color/colorWhite"
                    android:outlineSpotShadowColor="@color/colorWhite"
                    android:textOn="@string/functional_foods"
                    android:textSize="@dimen/sp_12" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_45"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/utm_avo_bold"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:textAllCaps="false"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:textColor="@color/text_color_hint"
                    android:outlineAmbientShadowColor="@color/colorWhite"
                    android:outlineSpotShadowColor="@color/colorWhite"
                    android:textOff="@string/american_ginseng"
                    android:textOn="@string/american_ginseng"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatToggleButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_45"
                android:background="@drawable/toggle_selector"
                android:fontFamily="@font/utm_avo_bold"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dp_15"
                android:textColor="@color/text_color_hint"
                android:outlineAmbientShadowColor="@color/colorWhite"
                android:outlineSpotShadowColor="@color/colorWhite"
                android:textOff="@string/gift_set"
                android:textOn="@string/gift_set"
                android:textSize="@dimen/sp_12" />

            <TextView
                style="@style/ColorMainTextBold15"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/price" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:elevation="@dimen/dp_3"
            android:outlineAmbientShadowColor="@color/colorBlack"
            android:outlineSpotShadowColor="@color/colorBlack"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dp_25"
            app:cardElevation="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_25"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_25"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_clear"
                    style="@style/App.Button.Text"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.8"
                    android:backgroundTint="@color/colorWhite"
                    android:text="@string/clear_filter"
                    app:cornerRadius="@dimen/dp_10"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/utm_avo_bold"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_apply"
                    style="@style/App.Button.Text"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="2.2"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/apply"
                    app:cornerRadius="@dimen/dp_10"
                    android:fontFamily="@font/utm_avo_bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_23"
            android:layout_alignParentBottom="true"
            android:background="@color/colorWhite"
            android:outlineSpotShadowColor="@color/colorWhite"
            android:outlineAmbientShadowColor="@color/colorWhite"
            android:elevation="@dimen/dp_11" />
    </RelativeLayout>
</layout>