<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/border_bottom">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_check"/>

        <TextView
            android:id="@+id/tv_status"
            style="@style/ColorMainTextRegular15"
            android:text="@string/forgot_success"
            android:layout_marginLeft="@dimen/dp_10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">

        <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:src="@drawable/ic_ellipse_dot"
            android:layout_marginTop="@dimen/dp_6"/>

        <TextView
            android:id="@+id/tv_message"
            style="@style/ColorMainTextRegular12"
            android:text="@string/forgot_text1"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/text_color_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">

        <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:src="@drawable/ic_ellipse_dot"
            android:layout_marginTop="@dimen/dp_6"/>

        <TextView
            style="@style/ColorMainTextRegular12"
            android:text="@string/forgot_text2"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/text_color_hint"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_back_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/utm_avo"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_12"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginBottom="@dimen/sp_20"/>

</LinearLayout>