<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_10"
            android:fontFamily="@font/utm_avo_bold"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:text="@string/lb_log_in"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/utm_avo"
        android:padding="@dimen/dp_20"
        android:text="@string/require_login"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_15">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            style="@style/App.Button.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGray"
            android:text="@string/lb_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAgree"
            style="@style/App.Button.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/lb_log_in" />
    </LinearLayout>

</LinearLayout>
