<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu_bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/border_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_check" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/ColorMainTextRegular15"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/register_success" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginTop="@dimen/dp_6"
            android:src="@drawable/ic_ellipse_dot" />

        <TextView
            android:id="@+id/tv_message"
            style="@style/ColorMainTextRegular12"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/register_success"
            android:textColor="@color/text_color_hint" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_continute"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/sp_15"
        android:background="@drawable/bg_button"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:fontFamily="@font/utm_avo"
        android:text="@string/continute_account"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_back_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/sp_20"
        android:background="@drawable/bg_button_gray"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:fontFamily="@font/utm_avo"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_12" />

</LinearLayout>